public/css/style.css
/* ... */
.overlay-bg {
  position: absolute;
  width: 100vw;
  background: #7cc68d;
  height: 100%;
  z-index: -99;
}

.overlay {
  position: absolute;
  width: 100%;
  background-color: rgba(68, 65, 65, 0.3);
  height: 100%;
  z-index: -96;
}

nav[role='login'] {
  position: fixed;
  top: 0;
  width: 100%;
  height: 40px;
  border-bottom: 1px solid #e5ecf0;
  z-index: 4;
  text-align: center;
  display: inline-block;
}

header[role='banner'] {
  position: fixed;
  width: 100%;
  height: 54px;
  z-index: 999;
  top: 0;
  background: #7cc68d;
  background: conic-gradient(from 360deg, #7cc68d, rgb(18, 160, 105));
}

header[role='banner'] h3 {
  position: absolute;
  top: 15px;
  left: 26px;
  color: #fff;
}

header[role='banner'] ul {
  display: flex;
  float: right;
  position: relative;
}

header[role='banner'] ul li {
  display: inline;
  margin-right: 10px;
}

header[role='banner'] ul li a img {
  height: 42px;
  width: 42px;
  top: 10px;
  position: relative;
  border: 1px solid #ddd;
  border-radius: 50%;
  padding: 5px;
}

header[role='banner'] ul li .logout {
  color: darkgreen;
  top: 18px;
  position: relative;
  text-decoration: none;
}

.header {
  position: fixed;
  top: 54px;
  width: 100%;
  z-index: 99;
  padding-bottom: 15px;
  -webkit-box-shadow: 0px 0.8px 0.8px #645f64;
  -moz-box-shadow: 0px 0.8px 0.8px #807780;
  box-shadow: 0px 0.8px 0.8px #868286;
}
#header {
   background-color: #F7F8FB;
}
.verify-header {
  background-color: #7cc68d !important;
}

.header img {
  max-width: 35vw;
  margin-top: 9px;
  height: 5.2em;
  display: inline-block;
}

.header div {
  display: inline-block;
  word-wrap: break-word;
  top: 29px;
  max-width: 370px;
  position: absolute;
  text-align: center;
  margin-left: 1px;
  font-size: 1.4em;
  hyphens: auto;
}

main[role='login'] {
  position: absolute;
  width: 100vw;
  height: 100%;
}

main #sign-in-form {
  z-index: 3;
  position: relative;
  top: 30vh;
  margin: 0 auto;
  max-width: 350px;
  border-radius: 4px;
  height: 400px;
  transition: transform 0.5s linear;
  background: rgb(250, 250, 250);
  padding: 20px 22px;
  padding: 1.2em;
  opacity: 0;
  animation-name: appear;
  animation-duration: 2s;
  animation-delay: 0.5s;
  animation-fill-mode: forwards;
  /* color: #fff; */
  -webkit-box-shadow: 0px 10px 13px -7px #000000,
    10px 10px 20px 10px rgba(0, 0, 0, 0);
  box-shadow: 0px 10px 13px -7px #000000, 10px 10px 20px 10px rgba(0, 0, 0, 0);
}

@keyframes appear {
  0% {
    opacity: 0;
    transform: scale(0.1)
  }

  100% {
    opacity: 1;
    transform: scale(1);
  }
}

main #sign-in-form {
  display: grid;
  grid-gap: 5px;
  grid-template-columns: repeat(1, 1fr);
}

#sign-in-form form {
  color: #000;
  display: grid;
  grid-template-columns: 1fr;
  grid-gap: 30px;
}

#sign-in-form label {
  display: block;
  left: 40px;
  position: relative;
  margin-bottom: 10px;
}

#sign-in-form input {
  width: 100%;
  padding: 0.6em;
  height: 52px;
  border: none;
  transition: 0.3s;
  padding-left: 40px;
  border-bottom: 2px solid #ccc;
  outline: none;
  border-radius: 5px;
}

#sign-in-form div {
  position: relative;
}

#sign-in-form div i {
  position: absolute;
  left: 0;
  top: 19px;
  padding: 9px 8px;
  color: #61b374;
  transition: 0.3s;
}

legend {
  text-decoration: underline;
  font-size: 20px;
  color: rgb(31, 160, 61);
}

.instructions {
  color: #000;
  margin-bottom: -10px;
}

.fa-search {
  cursor: pointer;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px white inset !important;
  border: none;
}

textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
textarea:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px white inset !important;
}

select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus,
select:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px white inset !important;
}

#sign-in-form input:focus {
  border-bottom: 3px solid rgba(81, 203, 238, 1) !important;
}

.btn {
  background-color: #61b374;
  border-radius: 10px;
  margin-right: 5px;
  border-style: none;
  box-shadow: rgb(240, 241, 247) 0 1px 0 0;
  color: #ffffff;
  outline-style: none;
  cursor: pointer;
}

#sign-in-form button {
  width: 100%;
  padding: 1.2em;
  padding: 9px 30px;
  box-shadow: 0 0.875rem 1.75rem rgba(0, 0, 0, .15), 0 0.625rem 0.625rem rgba(0, 0, 0, .12);
  transition: all .25s cubic-bezier(.25, .8, .25, 1);
  transition: .25s linear;
  border-radius: 5%;
  height: 52px;
}

#sign-in-form button:hover {
  box-shadow: 0 0 5px rgb(29, 32, 32);
}



button::-moz-focus-inner {
  border: 0;
}

a:hover, a:active, a:focus, a:link, a:visited {
  outline: 0;
  outline: 0 !important;
  outline-style:none;
}

.access-message {
  width: 100%;
  color: red;
  height: 30px;
}
#particles-js {
  width: 100vw;
  height: 100vh;
  position: absolute;
}
main[role='dashboard'] {
  position: absolute;
  display: flex;
  justify-content: center;
  width: 100vw;
  height: 100vh;
}

main[role='dashboard'] .container {
  width: 1200px;
  height: 900px;
  top: 180px;
  padding: 1em 2em;
  line-height: 1.6;
  color: #333;
  z-index: 800;
  position: relative;
  background: #fff;
  -webkit-box-shadow: 0px 10px 13px -7px #000000,
    10px 10px 20px 10px rgba(0, 0, 0, 0);
  box-shadow: 0px 10px 13px -7px #000000, 10px 10px 20px 10px rgba(0, 0, 0, 0);
}

main[role='dashboard'] .verification-container {
  height: 70% !important;
  position: relative;
  text-align: center;
}

main[role='dashboard'] .verification-container form {
  width: 100%;
  margin: 20px auto;
  height: 45px;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

main[role='dashboard'] .verification-container form div {
  width: 65%;
  position: relative;
  height: inherit;
}
/* ... */

